feat: implement magenta onsets and frames transcription
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@magenta/music": "^1.23.1",
     "@spotify/basic-pitch": "^1.0.1",
+    "@tensorflow/tfjs": "^4.22.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
