--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom": "^27.4.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
+    "vite-plugin-node-polyfills": "^0.25.0",
     "vitest": "^4.0.17"
   }
 }
